operated-backend.svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: operated-backend
    shell-managed: "yes"
  name: operated-backend
  namespace: shell-op
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: backend
    statefulset.kubernetes.io/pod-name: backend-0
